Added migration and update DB

--- a/server/Application/Application.csproj
+++ b/server/Application/Application.csproj
@@ -21,5 +21,11 @@
   <ItemGroup>
     <AdditionalFiles Include="../_stylecop/stylecop.json" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DTO\Request\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
   
 </Project>
