--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^5.0.0-beta.5",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.4",
+    "@mui/material": "^5.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -50,5 +56,6 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.3.1",
     "typescript": "^4.3.2"
-  }
+  },
+  "proxy": "https://localhost:44380"
 }
