--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,12 @@
     "@material-ui/styles": "^4.11.4",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.1",
+    "mobx": "^6.3.3",
+    "mobx-react-lite": "^3.2.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
@@ -49,6 +53,7 @@
     "@types/node": "^12.20.15",
     "@types/react": "^17.0.10",
     "@types/react-dom": "^17.0.7",
+    "@types/react-router-dom": "^5.3.0",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
