--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "@material-ui/styles": "^4.11.4",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.1",
+    "axios": "^0.22.0",
+    "jwt-decode": "^3.1.2",
     "mobx": "^6.3.3",
     "mobx-react-lite": "^3.2.1",
     "react": "^17.0.2",
