--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "jwt-decode": "^3.1.2",
     "mobx": "^6.3.3",
     "mobx-react-lite": "^3.2.1",
+    "mui-tables": "^2.0.4",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
